[package]
name = "mse_rocket_webapp"
version = "0.1.0"
edition = "2021"
authors = [ "Lukas (LukyLuke_ch) Zurschmiede <network-discover@ranta.ch>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.11" }
env_logger = { version = "0.9" }
chrono = { version = "0.4.22" }
